# esp32-ulp-i2c

./: CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  main.c
main/ulp/: i2c_label.S  ulp_main_file.S
